Criando Article Tecnologia

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 </head>
 <body>
   <header class="header-bg">
-    <div class="header">
+    <div class="header container">
       <a href="./">
         <img src="./img/bikcraft.svg" alt="Bikraft">
       </a>
@@ -28,7 +28,7 @@
     </div>
   </header>
   <main class="introducao-bg">
-    <div class="introducao">
+    <div class="container introducao">
       <div class="introducao-conteudo">
         <h1 class="font-1-xxl cor-0">Bicicletas feitas sob medida<span class="cor-p1">.</span></h1>
         <p class="font-2-l cor-5">Bicicletas elétricas de alta precisão e qualidade, feitas sob medida para você. Explore o mundo na sua velocidade com a Bikcraft.</p>
@@ -40,7 +40,7 @@
     </div>
   </main>
   <article class="bicicletas-lista">
-    <h2 class="font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
+    <h2 class="container font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
     <ul>
       <li>
         <a href="./bicicletas/magic.html">
@@ -64,6 +64,24 @@
         </a>
       </li>
     </ul>
+  </article>
+  <article class="tecnologia-bg">
+    <div class="tecnologia container">
+      <div class="tecnologia-conteudo">
+        <span>Tecnologia Avançada</span>
+        <h2>você escolhe as suas cores e componentes<span class="cor-p1">.</span></h2>
+        <p>Cada Bikcraft é única e possui a sua identidade. As medidas serão exatas para o seu corpo e altura, garantindo maior conforto e ergonomia na sua pedalada. Você pode também personalizar completamente as suas cores.</p>
+        <a href=""></a>
+        <div>
+          <img src="" alt="">
+          <h3></h3>
+          <p></p>
+        </div>
+      </div>
+      <div class="tecnologia-imagem">
+        <img src="./img/fotos/tecnologia.jpg" alt="">
+      </div>
+    </div>
   </article>
 </body>
 </html>
