--- a/index.html
+++ b/index.html
@@ -146,5 +146,42 @@
 
     </div>
   </article>
+  <footer class="footer-bg">
+    <div class="footer container">
+      <img src="./img/bikcraft.svg" alt="bikcraft">
+      <div class="footer-contato">
+        <h3 class="font-2-l-b cor-0">contato</h3>
+        <ul class="font-2-m cor-5">
+          <li><a href="tel:+5511999999999">+55 11 99999-9999</a></li>
+          <li><a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a></li>
+          <li>Rua Sem Nome, 100 - São Paulo</li>
+          <li>São Paulo - SP</li>
+        </ul>
+        <div class="footer-redes">
+          <a href="./">
+            <img src="./img/redes/instagram.svg" alt="Instagram">
+          </a>
+          <a href="./">
+            <img src="./img/redes/facebook.svg" alt="Facebook">
+          </a>
+          <a href="./">
+            <img src="./img/redes/youtube.svg" alt="Youtube">
+          </a>
+        </div>
+      </div>
+      <div class="footer-informacoes">
+        <h3 class="font-2-l-b cor-0">informações</h3>
+        <ul class="font-2-m cor-5">
+          <li><a href="./bicicletas.html">Bicicletas</a></li>
+          <li><a href="./seguros.html">Seguros</a></li>
+          <li><a href="./contato.html">Contato</a></li>
+          <li><a href="./termos.html">Termos e condições</a></li>
+        </ul>
+      </div>
+      <div class="footer-copy font-2-m cor-6">
+        <p>Bikcraft © Alguns direitos reservados.</p>
+      </div>
+    </div>
+  </footer>
 </body>
 </html>
