--- a/bicicletas.html
+++ b/bicicletas.html
@@ -6,7 +6,7 @@
   <meta name="description" content="Termos e condições">
   <title>Bicicletas | Bikraft</title>
 
-  <link rel="stylesheet" href="./css/style.css">
+  <link rel="stylesheet" href="../css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -15,14 +15,14 @@
 <body id="bicicletas">
   <header class="header-bg">
     <div class="header container">
-      <a href="./">
-        <img src="./img/bikcraft.svg" alt="Bikraft">
+      <a href="../">
+        <img src="../img/bikcraft.svg" alt="Bikraft">
       </a>
       <nav aria-label="primaria">
       <ul class="header-menu font-1-m cor-0">
-        <li><a href="./bicicletas.html">Bicicletas</a></li>
-        <li><a href="./seguros.html">Seguros</a></li>
-        <li><a href="./contato.html">Contato</a></li>
+        <li><a href="../bicicletas.html">Bicicletas</a></li>
+        <li><a href="../seguros.html">Seguros</a></li>
+        <li><a href="../contato.html">Contato</a></li>
       </ul>
       </nav>
     </div>
@@ -39,7 +39,7 @@
     <div>
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+          <img src="../img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
           <span class="font-2-m cor-0">R$ 4999</span>
         </div>
         <div class="bicicletas-conteudo">
@@ -47,23 +47,23 @@
           <p class="font-2-s cor-8">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <ul class="font-1-m cor-8">
             <li>
-              <img src="./img/icones/eletrica.svg" alt="">
+              <img src="../img/icones/eletrica.svg" alt="">
               Motor Elétrico
             </li>
             <li>
-              <img src="./img/icones/carbono.svg" alt="">
+              <img src="../img/icones/carbono.svg" alt="">
               Fibra de Carbono
             </li>
             <li>
-              <img src="./img/icones/velocidade.svg" alt="">
+              <img src="../img/icones/velocidade.svg" alt="">
               50 km/h
             </li>
             <li>
-              <img src="./img/icones/rastreador.svg" alt="">
+              <img src="../img/icones/rastreador.svg" alt="">
               Rastreador
             </li>
           </ul>
-          <a class="botao seta" href="./bicicletas/nebula.html">Mais sobre</a>
+          <a class="botao seta" href="../bicicletas/nimbus.html">Mais sobre</a>
         </div>
       </div>
     </div>
@@ -71,7 +71,7 @@
     <div class="bicicletas-bg">
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="./img/bicicletas/magic.jpg" alt="Bicicleta magic">
+          <img src="../img/bicicletas/magic.jpg" alt="Bicicleta magic">
           <span class="font-2-m cor-0">R$ 2999</span>
         </div>
         <div class="bicicletas-conteudo">
@@ -79,23 +79,23 @@
           <p class="font-2-s cor-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <ul class="font-1-m cor-5">
             <li>
-              <img src="./img/icones/eletrica.svg" alt="">
+              <img src="../img/icones/eletrica.svg" alt="">
               Motor Elétrico
             </li>
             <li>
-              <img src="./img/icones/carbono.svg" alt="">
+              <img src="../img/icones/carbono.svg" alt="">
               Fibra de Carbono
             </li>
             <li>
-              <img src="./img/icones/velocidade.svg" alt="">
+              <img src="../img/icones/velocidade.svg" alt="">
               45 km/h
             </li>
             <li>
-              <img src="./img/icones/rastreador.svg" alt="">
+              <img src="../img/icones/rastreador.svg" alt="">
               Rastreador
             </li>
           </ul>
-          <a class="botao seta" href="./bicicletas/nebula.html">Mais sobre</a>
+          <a class="botao seta" href="../bicicletas/magic.html">Mais sobre</a>
         </div>
       </div>
     </div>
@@ -103,7 +103,7 @@
     <div>
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta nebula">
+          <img src="../img/bicicletas/nebula.jpg" alt="Bicicleta nebula">
           <span class="font-2-m cor-0">R$ 3999</span>
         </div>
         <div class="bicicletas-conteudo">
@@ -111,23 +111,23 @@
           <p class="font-2-s cor-8">A Nebula Comic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <ul class="font-1-m cor-8">
             <li>
-              <img src="./img/icones/eletrica.svg" alt="">
+              <img src="../img/icones/eletrica.svg" alt="">
               Motor Elétrico
             </li>
             <li>
-              <img src="./img/icones/carbono.svg" alt="">
+              <img src="../img/icones/carbono.svg" alt="">
               Fibra de Carbono
             </li>
             <li>
-              <img src="./img/icones/velocidade.svg" alt="">
+              <img src="../img/icones/velocidade.svg" alt="">
               20 km/h
             </li>
             <li>
-              <img src="./img/icones/rastreador.svg" alt="">
+              <img src="../img/icones/rastreador.svg" alt="">
               Rastreador
             </li>
           </ul>
-          <a class="botao seta" href="./bicicletas/nebula.html">Mais sobre</a>
+          <a class="botao seta" href="../bicicletas/nebula.html">Mais sobre</a>
         </div>
       </div>
     </div>
@@ -136,7 +136,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="./img/bikcraft.svg" alt="bikcraft">
+      <img src="../img/bikcraft.svg" alt="bikcraft">
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">contato</h3>
         <ul class="font-2-m cor-5">
@@ -147,23 +147,23 @@
         </ul>
         <div class="footer-redes">
           <a href="./">
-            <img src="./img/redes/instagram.svg" alt="Instagram">
+            <img src="../img/redes/instagram.svg" alt="Instagram">
           </a>
           <a href="./">
-            <img src="./img/redes/facebook.svg" alt="Facebook">
+            <img src="../img/redes/facebook.svg" alt="Facebook">
           </a>
           <a href="./">
-            <img src="./img/redes/youtube.svg" alt="Youtube">
+            <img src="../img/redes/youtube.svg" alt="Youtube">
           </a>
         </div>
       </div>
       <div class="footer-informacoes">
         <h3 class="font-2-l-b cor-0">informações</h3>
         <ul class="font-2-m cor-5">
-          <li><a href="./bicicletas.html">Bicicletas</a></li>
-          <li><a href="./seguros.html">Seguros</a></li>
-          <li><a href="./contato.html">Contato</a></li>
-          <li><a href="./termos.html">Termos e condições</a></li>
+          <li><a href="../bicicletas.html">Bicicletas</a></li>
+          <li><a href="../seguros.html">Seguros</a></li>
+          <li><a href="../contato.html">Contato</a></li>
+          <li><a href="../termos.html">Termos e condições</a></li>
         </ul>
       </div>
       <div class="footer-copy font-2-m cor-6">
