--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Termos e condições">
-  <title>Nimbus | Bikraft</title>
+  <title>Magic | Bikraft</title>
 
   <link rel="stylesheet" href="../css/style.css">
 
@@ -31,18 +31,18 @@
   <main class="titulo-bg">
     <div>
       <div class="titulo container">
-        <p class="font-2-xl cor-5">r$ 4999</p>
-        <h1 class="font-1-xxl cor-0">Nimbus Stark<span class="cor-p1">.</span></h1>
+        <p class="font-2-xl cor-5">r$ 2499</p>
+        <h1 class="font-1-xxl cor-0">Magic Might<span class="cor-p1">.</span></h1>
       </div>
     </div>
     <div class="bicicleta container">
       <div class="bicicleta-imagens">
-        <img src="../img/bicicleta/nimbus1.jpg" alt="">
         <img src="../img/bicicleta/nimbus2.jpg" alt="">
+        <img src="../img/bicicleta/nimbus1.jpg" alt="">
         <img src="../img/bicicleta/nimbus3.jpg" alt="">
       </div>
       <div class="bicicleta-conteudo">
-        <p class="font-2-l cor-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
+        <p class="font-2-l cor-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
           <a class="botao" href="../orcamento.html">Comprar Agora</a>
           <span class="font-1-xs cor-6"><img src="../img/icones/entrega.svg" alt=""> entrega em 5 dias</span>
@@ -75,11 +75,11 @@
         <!-- box de ficha técnica -->
         <h2 class="font-1-xs cor-0">Ficha Técnica</h2>
         <ul class="bicicleta-ficha font-2-s cor-4">
-          <li>Peso <span>9 kg</span></li>
-          <li>Altura <span>60 cm</span></li>
-          <li>Largura <span>120 cm</span></li>
-          <li>Profundidade <span>10 cm</span></li>
-          <li>Marchas <span>16</span></li>
+          <li>Peso <span>10 kg</span></li>
+          <li>Altura <span>45 cm</span></li>
+          <li>Largura <span>100 cm</span></li>
+          <li>Profundidade <span>12 cm</span></li>
+          <li>Marchas <span>12</span></li>
           <li>Roda <span>29</span></li>
         </ul>
       </div>
@@ -89,10 +89,10 @@
     <h2 class="font-1-xxl">escolha a sua<span class="cor-p1">.</span></h2>
     <ul>
       <li>
-        <a href="./magic.html">
-          <img src="../img/bicicletas/magic.jpg" alt="Bicicleta preta">
-          <h3 class="font-1-xl">Magic Might</h3>
-          <span class="font-2-m cor-8">R$ 2499</span>
+        <a href="./nimbus.html">
+          <img src="../img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+          <h3 class="font-1-xl">Numbus Stark</h3>
+          <span class="font-2-m cor-8">R$ 4999</span>
         </a>
       </li>
       <li>
