--- a/contato.html
+++ b/contato.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Termos e condições">
-  <title>Termos e condições | Bikraft</title>
+  <title>Contato | Bikraft</title>
 
   <link rel="stylesheet" href="./css/style.css">
 
@@ -12,7 +12,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
-<body id="termos">
+<body id="contato">
   <header class="header-bg">
     <div class="header container">
       <a href="./">
@@ -31,19 +31,56 @@
   <main>
     <div class="titulo-bg">
       <div class="titulo container">
-        <p class="font-2-l-b cor-5">Termos de uso</p>
-        <h1 class="font-1-xxl cor-0">termos e condições<span class="cor-p1">.</span></h1>
+        <p class="font-2-l-b cor-5">Repostas em até 24h</p>
+        <h1 class="font-1-xxl cor-0">Nosso contato<span class="cor-p1">.</span></h1>
       </div>
     </div>
-    <div class="termos font-2-s cor-10 container">
-      <h2 class="font-1-l cor-11">1. Política de Estorno</h2>
-      <p>1.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-      <p>1.2 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-      <p>1.3 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-      <h2 class="font-1-l cor-11">2. Conta do Usuário</h2>
-      <p>2.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
-      <h2 class="font-1-l cor-11">3. Seguro</h2>
-      <p>3.1 Aceitamos cartões de crédito com as bandeiras: Visa, Mastercard, ELO e American Express. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</p>
+    <div class="contato container">
+      <section class="contato-dados" aria-label="Endereço">
+        <h2 class="font-1-m cor-0">Loja Online</h2>
+        <div class="contato-endereco font-2-s cor-4">
+          <p>Rua Ali Perto, 35</p>
+          <p>Rio de Janeiro - RJ</p>
+          <p>Brasil - Terra - Vita Láctea</p>
+        </div>
+        <address class="contato-meios font-2-s cor-4">
+          <a href="mailto:contato@bikcraft.com">contato@bikcraft.com</a>
+          <a href="mailto:assistencia@bikcraft.com">assistencia@bikcraft.com</a>
+          <a href="tel:+5511999999999">+55 11 99999-9999</a>
+        </address>
+        <div class="contato-redes">
+          <a href="./">
+            <img src="./img/redes/instagram-p.svg" alt="Instagram">
+          </a>
+          <a href="./">
+            <img src="./img/redes/facebook-p.svg" alt="Facebook">
+          </a>
+          <a href="./">
+            <img src="./img/redes/youtube-p.svg" alt="Youtube">
+          </a>
+        </div>
+      </section>
+      <section class="contato-formulario" aria-label="Formulário">
+        <form class="form" action="./contato.html">
+          <div>
+            <label for="nome">Nome</label>
+            <input type="text" id="nome" name="nome" placeholder="Seu nome">
+          </div>
+          <div>
+            <label for="telefone">Telefone</label>
+            <input type="text" id="telefone" name="telefone" placeholder="(11) 90000-0000">
+          </div>
+          <div class="col-2">
+            <label for="email">Email</label>
+            <input type="email" id="email" name="email" placeholder="contato@email.com">
+          </div>
+          <div class="col-2">
+            <label for="mensagem">Mensagem</label>
+            <textarea id="mensagem" rows="5" name="mensagem" placeholder="O que precisa?"></textarea>
+          </div>
+          <button class="botao col-2">Enviar Mensagem</button>
+        </form>
+      </section>
     </div>
   </main>
 
