Adicionado otmizações em imagens e no index.html

--- a/seguros.html
+++ b/seguros.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Termos e condições">
   <title>Seguros | Bikraft</title>
 
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
+
 <body id="seguros">
   <header class="header-bg">
     <div class="header container">
@@ -19,11 +22,11 @@
         <img src="./img/bikcraft.svg" alt="Bikraft">
       </a>
       <nav aria-label="primaria">
-      <ul class="header-menu font-1-m cor-0">
-        <li><a href="./bicicletas.html">Bicicletas</a></li>
-        <li><a href="./seguros.html">Seguros</a></li>
-        <li><a href="./contato.html">Contato</a></li>
-      </ul>
+        <ul class="header-menu font-1-m cor-0">
+          <li><a href="./bicicletas.html">Bicicletas</a></li>
+          <li><a href="./seguros.html">Seguros</a></li>
+          <li><a href="./contato.html">Contato</a></li>
+        </ul>
       </nav>
     </div>
   </header>
@@ -35,33 +38,33 @@
         <h1 class="font-1-xxl cor-0">você seguro<span class="cor-p1">.</span></h1>
       </div>
     </div>
-      <div class="seguros container">
-        <div class="seguros-item">
-          <h3 class="font-1-xl cor-6">PRATA</h3>
-          <span class="font-1-xl cor-0">R$ 199 <span class="font-1-xs cor-6">mensal</span></span>
-          <ul class="font-2-m cor-0">
-            <li>Duas trocas por ano</li>
-            <li>Assistência técnica</li>
-            <li>Suporte 08h às 18h</li>
-            <li>Cobertura estadual</li>
-          </ul>
-          <a class="botao secundario" href="./orcamento.html">inscreva-se</a>
-        </div>
-        
-        <div class="seguros-item">
-          <h3 class="font-1-xl cor-p1">OURO</h3>
-          <span class="font-1-xl cor-0">R$ 299 <span class="font-1-xs cor-6">mensal</span></span>
-          <ul class="font-2-m cor-0">
-            <li>Cinco trocas por ano</li>
-            <li>Assistência especial</li>
-            <li>Suporte 24h</li>
-            <li>Cobertura nacional</li>
-            <li>Desconto em parceiros</li>
-            <li>Acesso ao Clube Bikcraft</li>
-          </ul>
-          <a class="botao" href="./orcamento.html">inscreva-se</a>
-        </div>
+    <div class="seguros container">
+      <div class="seguros-item">
+        <h3 class="font-1-xl cor-6">PRATA</h3>
+        <span class="font-1-xl cor-0">R$ 199 <span class="font-1-xs cor-6">mensal</span></span>
+        <ul class="font-2-m cor-0">
+          <li>Duas trocas por ano</li>
+          <li>Assistência técnica</li>
+          <li>Suporte 08h às 18h</li>
+          <li>Cobertura estadual</li>
+        </ul>
+        <a class="botao secundario" href="./orcamento.html">inscreva-se</a>
       </div>
+
+      <div class="seguros-item">
+        <h3 class="font-1-xl cor-p1">OURO</h3>
+        <span class="font-1-xl cor-0">R$ 299 <span class="font-1-xs cor-6">mensal</span></span>
+        <ul class="font-2-m cor-0">
+          <li>Cinco trocas por ano</li>
+          <li>Assistência especial</li>
+          <li>Suporte 24h</li>
+          <li>Cobertura nacional</li>
+          <li>Desconto em parceiros</li>
+          <li>Acesso ao Clube Bikcraft</li>
+        </ul>
+        <a class="botao" href="./orcamento.html">inscreva-se</a>
+      </div>
+    </div>
   </main>
 
   <article class="vantagens-bg">
@@ -173,4 +176,5 @@
     </div>
   </footer>
 </body>
+
 </html>
