--- a/contato.html
+++ b/contato.html
@@ -1,17 +1,20 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <meta name="description" content="Termos e condições">
   <title>Contato | Bikraft</title>
 
+  <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
+
 <body id="contato">
   <header class="header-bg">
     <div class="header container">
@@ -19,11 +22,11 @@
         <img src="./img/bikcraft.svg" alt="Bikraft">
       </a>
       <nav aria-label="primaria">
-      <ul class="header-menu font-1-m cor-0">
-        <li><a href="./bicicletas.html">Bicicletas</a></li>
-        <li><a href="./seguros.html">Seguros</a></li>
-        <li><a href="./contato.html">Contato</a></li>
-      </ul>
+        <ul class="header-menu font-1-m cor-0">
+          <li><a href="./bicicletas.html">Bicicletas</a></li>
+          <li><a href="./seguros.html">Seguros</a></li>
+          <li><a href="./contato.html">Contato</a></li>
+        </ul>
       </nav>
     </div>
   </header>
@@ -86,36 +89,36 @@
 
   <article class="lojas container">
     <h2 class="font-1-xxl">lojas locais<span class="cor-p1">.</h2>
-      <div class="lojas-item">
-        <img src="./img/lojas/rj.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 - Rio de Janeiro - RJ">
-        <div class="lojas-conteudo">
-          <h3 class="font-1-xl">Rio de Janeiro</h3>
-          <div class="lojas-dados font-2-s cor-8">
-            <p>Rua Ali Perto, 25</p>
-            <p>Rio de Janeiro - RJ</p>
-          </div>
-          <div class="lojas-dados font-2-s cor-8">
-            <a href="mailto:rj@bikcraft.com">rj@bikcraft.com</a>
-            <a href="tel:+5521999999999">+55 21 99999-9999</a>
-          </div>
-          <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt="">08-18h de seg a dom</p>
+    <div class="lojas-item">
+      <img src="./img/lojas/rj.jpg" alt="mapa marcando o endereço em Rua Ali Perto, 25 - Rio de Janeiro - RJ">
+      <div class="lojas-conteudo">
+        <h3 class="font-1-xl">Rio de Janeiro</h3>
+        <div class="lojas-dados font-2-s cor-8">
+          <p>Rua Ali Perto, 25</p>
+          <p>Rio de Janeiro - RJ</p>
         </div>
-      </div>
-      <div class="lojas-item">
-        <img src="./img/lojas/sp.jpg" alt="mapa marcando o endereço em Rua Sem Nome, 40 - São Paulo - SP">
-        <div class="lojas-conteudo">
-          <h3 class="font-1-xl">São Paulo</h3>
-          <div class="lojas-dados font-2-s cor-8">
-            <p>Rua Sem Nome, 40</p>
-            <p>São Paulo - SP</p>
-          </div>
-          <div class="lojas-dados font-2-s cor-8">
-            <a href="mailto:sp@bikcraft.com">sp@bikcraft.com</a>
-            <a href="tel:+5511999999999">+55 11 99999-9999</a>
-          </div>
-          <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt="">08-18h de seg a dom</p>
+        <div class="lojas-dados font-2-s cor-8">
+          <a href="mailto:rj@bikcraft.com">rj@bikcraft.com</a>
+          <a href="tel:+5521999999999">+55 21 99999-9999</a>
         </div>
+        <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt="">08-18h de seg a dom</p>
       </div>
+    </div>
+    <div class="lojas-item">
+      <img src="./img/lojas/sp.jpg" alt="mapa marcando o endereço em Rua Sem Nome, 40 - São Paulo - SP">
+      <div class="lojas-conteudo">
+        <h3 class="font-1-xl">São Paulo</h3>
+        <div class="lojas-dados font-2-s cor-8">
+          <p>Rua Sem Nome, 40</p>
+          <p>São Paulo - SP</p>
+        </div>
+        <div class="lojas-dados font-2-s cor-8">
+          <a href="mailto:sp@bikcraft.com">sp@bikcraft.com</a>
+          <a href="tel:+5511999999999">+55 11 99999-9999</a>
+        </div>
+        <p class="lojas-tempo font-1-s"><img src="./img/icones/horario.svg" alt="">08-18h de seg a dom</p>
+      </div>
+    </div>
   </article>
 
   <footer class="footer-bg">
@@ -156,4 +159,5 @@
     </div>
   </footer>
 </body>
+
 </html>
