Ativar itens do orcamento com JS

--- a/bicicletas.html
+++ b/bicicletas.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
+
 <body id="bicicletas">
   <header class="header-bg">
     <div class="header container">
@@ -19,11 +21,11 @@
         <img src="../img/bikcraft.svg" alt="Bikraft">
       </a>
       <nav aria-label="primaria">
-      <ul class="header-menu font-1-m cor-0">
-        <li><a href="../bicicletas.html">Bicicletas</a></li>
-        <li><a href="../seguros.html">Seguros</a></li>
-        <li><a href="../contato.html">Contato</a></li>
-      </ul>
+        <ul class="header-menu font-1-m cor-0">
+          <li><a href="../bicicletas.html">Bicicletas</a></li>
+          <li><a href="../seguros.html">Seguros</a></li>
+          <li><a href="../contato.html">Contato</a></li>
+        </ul>
       </nav>
     </div>
   </header>
@@ -131,7 +133,7 @@
         </div>
       </div>
     </div>
-    
+
   </main>
 
   <footer class="footer-bg">
@@ -171,5 +173,7 @@
       </div>
     </div>
   </footer>
+  <script src="./js/script.js"></script>
 </body>
+
 </html>
