--- a/bicicletas/nimbus.html
+++ b/bicicletas/nimbus.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="pt-br">
+
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -12,6 +13,7 @@
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
 </head>
+
 <body id="bicicleta">
   <header class="header-bg">
     <div class="header container">
@@ -19,11 +21,11 @@
         <img src="../img/bikcraft.svg" alt="Bikraft">
       </a>
       <nav aria-label="primaria">
-      <ul class="header-menu font-1-m cor-0">
-        <li><a href="../bicicletas.html">Bicicletas</a></li>
-        <li><a href="../seguros.html">Seguros</a></li>
-        <li><a href="../contato.html">Contato</a></li>
-      </ul>
+        <ul class="header-menu font-1-m cor-0">
+          <li><a href="../bicicletas.html">Bicicletas</a></li>
+          <li><a href="../seguros.html">Seguros</a></li>
+          <li><a href="../contato.html">Contato</a></li>
+        </ul>
       </nav>
     </div>
   </header>
@@ -37,14 +39,14 @@
     </div>
     <div class="bicicleta container">
       <div class="bicicleta-imagens">
-        <img src="../img/bicicleta/nimbus1.jpg" alt="">
-        <img src="../img/bicicleta/nimbus2.jpg" alt="">
-        <img src="../img/bicicleta/nimbus3.jpg" alt="">
+        <img src="../img/bicicleta/nimbus1.jpg" alt="Bicicleta 1">
+        <img src="../img/bicicleta/nimbus2.jpg" alt="Bicicleta 2">
+        <img src="../img/bicicleta/nimbus3.jpg" alt="Bicicleta 3">
       </div>
       <div class="bicicleta-conteudo">
         <p class="font-2-l cor-5">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
         <div class="bicicleta-comprar">
-          <a class="botao" href="../orcamento.html">Comprar Agora</a>
+          <a class="botao" href="../orcamento.html?tipo=bikcraft&produto=nimbus">Comprar Agora</a>
           <span class="font-1-xs cor-6"><img src="../img/icones/entrega.svg" alt=""> entrega em 5 dias</span>
           <span class="font-1-xs cor-6"><img src="../img/icones/estoque.svg" alt=""> 18 em estoque</span>
         </div>
@@ -154,5 +156,7 @@
       </div>
     </div>
   </footer>
+  <script src="../js/script.js"></script>
 </body>
+
 </html>
