--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
         <a class="link" href="./bicicletas.html">Escolha um modelo</a>
         <div class="tecnologia-vantagens">
           <div>
-            <img src="./img/icones/eletrica.svg" width="24" height="24"  alt="">
+            <img src="./img/icones/eletrica.svg" width="24" height="24" alt="">
             <h3 class="font-1-m cor-0">Motor Elétrico</h3>
             <p class="font-2-s cor-5">Toda Bikcraft é equipada com um motor elétrico que possui duração de até 120h. A bateria é recarregada com a sua energia gasta ao pedalar.</p>
           </div>
@@ -104,7 +104,7 @@
       <li><img src="./img/parceiros/lescone.svg" alt="LeScone" width="208" height="41"></li>
       <li><img src="./img/parceiros/flexblog.svg" alt="FlexBlog" width="165" height="38"></li>
       <li><img src="./img/parceiros/wildbeast.svg" alt="Wildbeast" width="196" height="34"></li>
-      <li><img src="./img/parceiros/surfbot.svg" alt="Surfbot" width="200" height="49"></li>  
+      <li><img src="./img/parceiros/surfbot.svg" alt="Surfbot" width="200" height="49"></li>
     </ul>
   </section>
   <section class="depoimento" aria-label="Depoimento">
@@ -163,13 +163,13 @@
         </ul>
         <div class="footer-redes">
           <a href="./">
-            <img src="./img/redes/instagram.svg"  width="32" height="32" alt="Instagram">
+            <img src="./img/redes/instagram.svg" width="32" height="32" alt="Instagram">
           </a>
           <a href="./">
-            <img src="./img/redes/facebook.svg"  width="32" height="32" alt="Facebook">
+            <img src="./img/redes/facebook.svg" width="32" height="32" alt="Facebook">
           </a>
           <a href="./">
-            <img src="./img/redes/youtube.svg"  width="32" height="32" alt="Youtube">
+            <img src="./img/redes/youtube.svg" width="32" height="32" alt="Youtube">
           </a>
         </div>
       </div>
@@ -187,6 +187,7 @@
       </div>
     </div>
   </footer>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
