--- a/seguros.html
+++ b/seguros.html
@@ -48,7 +48,7 @@
           <li>Suporte 08h às 18h</li>
           <li>Cobertura estadual</li>
         </ul>
-        <a class="botao secundario" href="./orcamento.html">inscreva-se</a>
+        <a class="botao secundario" href="./orcamento.html?tipo=seguro&produto=prata">inscreva-se</a>
       </div>
 
       <div class="seguros-item">
@@ -62,7 +62,7 @@
           <li>Desconto em parceiros</li>
           <li>Acesso ao Clube Bikcraft</li>
         </ul>
-        <a class="botao" href="./orcamento.html">inscreva-se</a>
+        <a class="botao" href="./orcamento.html?tipo=seguro&produto=ouro">inscreva-se</a>
       </div>
     </div>
   </main>
@@ -175,6 +175,7 @@
       </div>
     </div>
   </footer>
+  <script src="./js/script.js"></script>
 </body>
 
 </html>
