Criate actions in seguros.html, script.js (Ativar Link Menu) and perguntas.css(line 49 and add on button)

--- a/seguros.html
+++ b/seguros.html
@@ -117,23 +117,23 @@
       </div>
       <div>
         <dt><button class="font-1-m-b" aria-controls="pergunta2" aria-expanded="false">Como posso entrar em contato?</button></dt>
-        <dd id="pergunta2" class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+        <dd id="pergunta2" class="font-2-s cor-9">Pelo nossos canais de atendimento por e-mail, telefone, celular ou Whatsapp.</dd>
       </div>
       <div>
         <dt><button class="font-1-m-b" aria-controls="pergunta3" aria-expanded="false">Vocês possuem algum desconto?</button></dt>
-        <dd id="pergunta3" class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+        <dd id="pergunta3" class="font-2-s cor-9">Todos os produtos tem valores fixados abaixo do mercado. Com valores a vista existe sim analise e aplicação de desconto.</dd>
       </div>
       <div>
         <dt><button class="font-1-m-b" aria-controls="pergunta4" aria-expanded="false">Qual a garantia que possuo?</button></dt>
-        <dd id="pergunta4" class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+        <dd id="pergunta4" class="font-2-s cor-9">Todos os produtos tem garantia de 1 ano de fabrica. Anexado junto aos produtos durante o envio com nota-fiscal.</dd>
       </div>
       <div>
-        <dt><button class="font-1-m-b" aria-controls="pergunta5" aria-expanded="false">Posso parcelar no boleto?</dt>
-        <dd id="pergunta5" class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+        <dt><button class="font-1-m-b" aria-controls="pergunta5" aria-expanded="false">Posso parcelar no boleto?</button></dt>
+        <dd id="pergunta5" class="font-2-s cor-9">Não. Todos os produtos tem parcelamento apenas para pagamento com cartões de credito.</dd>
       </div>
       <div>
-        <dt><button class="font-1-m-b" aria-controls="pergunta6" aria-expanded="false">Quantas trocas posso fazer ao ano?</dt>
-        <dd id="pergunta6" class="font-2-s cor-9">Aceitamos pagamentos parcelados em todos os cartões de crédito. Para pagamentos à vista também aceitarmos PIX e Boleto através do PagSeguro.</dd>
+        <dt><button class="font-1-m-b" aria-controls="pergunta6" aria-expanded="false">Quantas trocas posso fazer ao ano?</button></dt>
+        <dd id="pergunta6" class="font-2-s cor-9">Poderá realizar a quantidade de trocas conforme plano contratado.</dd>
       </div>
     </dl>
   </article>
