--- a/seguros.html
+++ b/seguros.html
@@ -13,6 +13,8 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Merriweather:ital,wght@1,900&family=Poppins:wght@400;600&family=Roboto:wght@400;500&display=swap" rel="stylesheet">
+
+  <script>document.documentElement.classList.add('js');</script>
 </head>
 
 <body id="seguros">
@@ -38,7 +40,7 @@
         <h1 class="font-1-xxl cor-0">você seguro<span class="cor-p1">.</span></h1>
       </div>
     </div>
-    <div class="seguros container">
+    <div class="seguros container fadeInLeft" data-anime="200">
       <div class="seguros-item">
         <h3 class="font-1-xl cor-6">PRATA</h3>
         <span class="font-1-xl cor-0">R$ 199 <span class="font-1-xs cor-6">mensal</span></span>
@@ -51,7 +53,7 @@
         <a class="botao secundario" href="./orcamento.html?tipo=seguro&produto=prata">inscreva-se</a>
       </div>
 
-      <div class="seguros-item">
+      <div class="seguros-item fadeInRight" data-anime="400">
         <h3 class="font-1-xl cor-p1">OURO</h3>
         <span class="font-1-xl cor-0">R$ 299 <span class="font-1-xs cor-6">mensal</span></span>
         <ul class="font-2-m cor-0">
@@ -175,6 +177,7 @@
       </div>
     </div>
   </footer>
+  <script src="./plugins/simple-anime.js"></script>
   <script src="./js/script.js"></script>
 </body>
 
