--- a/contato.html
+++ b/contato.html
@@ -7,6 +7,7 @@
   <meta name="description" content="Termos e condições">
   <title>Contato | Bikraft</title>
 
+  <link rel="icon" href="./favicon.svg" type="image/svg+xml">
   <link rel="preload" href="./css/style.css" as="style">
   <link rel="stylesheet" href="./css/style.css">
 
