--- a/bicicletas.html
+++ b/bicicletas.html
@@ -21,14 +21,14 @@
 <body id="bicicletas">
   <header class="header-bg">
     <div class="header container">
-      <a href="../">
-        <img src="../img/bikcraft.svg" alt="Bikraft">
+      <a href="./">
+        <img src="./img/bikcraft.svg" alt="Bikraft">
       </a>
       <nav aria-label="primaria">
         <ul class="header-menu font-1-m cor-0">
-          <li><a href="../bicicletas.html">Bicicletas</a></li>
-          <li><a href="../seguros.html">Seguros</a></li>
-          <li><a href="../contato.html">Contato</a></li>
+          <li><a href="./bicicletas.html">Bicicletas</a></li>
+          <li><a href="./seguros.html">Seguros</a></li>
+          <li><a href="./contato.html">Contato</a></li>
         </ul>
       </nav>
     </div>
@@ -45,7 +45,7 @@
     <div>
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="../img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
+          <img src="./img/bicicletas/nimbus.jpg" alt="Bicicleta preta">
           <span class="font-2-m cor-0">R$ 4999</span>
         </div>
         <div class="bicicletas-conteudo">
@@ -53,23 +53,23 @@
           <p class="font-2-s cor-8">A Nimbus Stark é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <ul class="font-1-m cor-8">
             <li>
-              <img src="../img/icones/eletrica.svg" alt="">
+              <img src="./img/icones/eletrica.svg" alt="">
               Motor Elétrico
             </li>
             <li>
-              <img src="../img/icones/carbono.svg" alt="">
+              <img src="./img/icones/carbono.svg" alt="">
               Fibra de Carbono
             </li>
             <li>
-              <img src="../img/icones/velocidade.svg" alt="">
+              <img src="./img/icones/velocidade.svg" alt="">
               50 km/h
             </li>
             <li>
-              <img src="../img/icones/rastreador.svg" alt="">
+              <img src="./img/icones/rastreador.svg" alt="">
               Rastreador
             </li>
           </ul>
-          <a class="botao seta" href="../bicicletas/nimbus.html">Mais sobre</a>
+          <a class="botao seta" href="./bicicletas/nimbus.html">Mais sobre</a>
         </div>
       </div>
     </div>
@@ -77,7 +77,7 @@
     <div class="bicicletas-bg">
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="../img/bicicletas/magic.jpg" alt="Bicicleta magic">
+          <img src="./img/bicicletas/magic.jpg" alt="Bicicleta magic">
           <span class="font-2-m cor-0">R$ 2999</span>
         </div>
         <div class="bicicletas-conteudo">
@@ -85,23 +85,23 @@
           <p class="font-2-s cor-5">A Magic Might é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <ul class="font-1-m cor-5">
             <li>
-              <img src="../img/icones/eletrica.svg" alt="">
+              <img src="./img/icones/eletrica.svg" alt="">
               Motor Elétrico
             </li>
             <li>
-              <img src="../img/icones/carbono.svg" alt="">
+              <img src="./img/icones/carbono.svg" alt="">
               Fibra de Carbono
             </li>
             <li>
-              <img src="../img/icones/velocidade.svg" alt="">
+              <img src="./img/icones/velocidade.svg" alt="">
               45 km/h
             </li>
             <li>
-              <img src="../img/icones/rastreador.svg" alt="">
+              <img src="./img/icones/rastreador.svg" alt="">
               Rastreador
             </li>
           </ul>
-          <a class="botao seta" href="../bicicletas/magic.html">Mais sobre</a>
+          <a class="botao seta" href="./bicicletas/magic.html">Mais sobre</a>
         </div>
       </div>
     </div>
@@ -109,7 +109,7 @@
     <div>
       <div class="bicicletas container">
         <div class="bicicletas-imagem">
-          <img src="../img/bicicletas/nebula.jpg" alt="Bicicleta nebula">
+          <img src="./img/bicicletas/nebula.jpg" alt="Bicicleta nebula">
           <span class="font-2-m cor-0">R$ 3999</span>
         </div>
         <div class="bicicletas-conteudo">
@@ -117,23 +117,23 @@
           <p class="font-2-s cor-8">A Nebula Comic é a melhor Bikcraft já criada pela nossa equipe. Ela vem equipada com os melhores acessórios, o que garante maior velocidade.</p>
           <ul class="font-1-m cor-8">
             <li>
-              <img src="../img/icones/eletrica.svg" alt="">
+              <img src="./img/icones/eletrica.svg" alt="">
               Motor Elétrico
             </li>
             <li>
-              <img src="../img/icones/carbono.svg" alt="">
+              <img src="./img/icones/carbono.svg" alt="">
               Fibra de Carbono
             </li>
             <li>
-              <img src="../img/icones/velocidade.svg" alt="">
+              <img src="./img/icones/velocidade.svg" alt="">
               20 km/h
             </li>
             <li>
-              <img src="../img/icones/rastreador.svg" alt="">
+              <img src="./img/icones/rastreador.svg" alt="">
               Rastreador
             </li>
           </ul>
-          <a class="botao seta" href="../bicicletas/nebula.html">Mais sobre</a>
+          <a class="botao seta" href="./bicicletas/nimbus.html">Mais sobre</a>
         </div>
       </div>
     </div>
