--- a/bicicletas/magic.html
+++ b/bicicletas/magic.html
@@ -8,7 +8,7 @@
   <title>Magic | Bikraft</title>
 
   <link rel="icon" href="../favicon.svg" type="image/svg+xml">
-  <link rel="preload" href="./css/style.min.css" as="style">
+  <link rel="preload" href="../css/style.min.css" as="style">
   <link rel="stylesheet" href="../css/style.min.css">
 
   <link rel="preconnect" href="https://fonts.googleapis.com">
