--- a/bicicletas.html
+++ b/bicicletas.html
@@ -142,7 +142,7 @@
 
   <footer class="footer-bg">
     <div class="footer container">
-      <img src="../img/bikcraft.svg" alt="bikcraft">
+      <img src="./img/bikcraft.svg" alt="bikcraft">
       <div class="footer-contato">
         <h3 class="font-2-l-b cor-0">contato</h3>
         <ul class="font-2-m cor-5">
@@ -153,23 +153,23 @@
         </ul>
         <div class="footer-redes">
           <a href="./">
-            <img src="../img/redes/instagram.svg" alt="Instagram">
+            <img src="./img/redes/instagram.svg" alt="Instagram">
           </a>
           <a href="./">
-            <img src="../img/redes/facebook.svg" alt="Facebook">
+            <img src="./img/redes/facebook.svg" alt="Facebook">
           </a>
           <a href="./">
-            <img src="../img/redes/youtube.svg" alt="Youtube">
+            <img src="./img/redes/youtube.svg" alt="Youtube">
           </a>
         </div>
       </div>
       <div class="footer-informacoes">
         <h3 class="font-2-l-b cor-0">informações</h3>
         <ul class="font-2-m cor-5">
-          <li><a href="../bicicletas.html">Bicicletas</a></li>
-          <li><a href="../seguros.html">Seguros</a></li>
-          <li><a href="../contato.html">Contato</a></li>
-          <li><a href="../termos.html">Termos e condições</a></li>
+          <li><a href="./bicicletas.html">Bicicletas</a></li>
+          <li><a href="./seguros.html">Seguros</a></li>
+          <li><a href="./contato.html">Contato</a></li>
+          <li><a href="./termos.html">Termos e condições</a></li>
         </ul>
       </div>
       <div class="footer-copy font-2-m cor-6">
